[tool.poetry]
name = "sapling-ws"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.23"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[tool.autopep8]
max_line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
